--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "npm": "8.5.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "start:client": "cd client && npm start",
-    "start:server": "npm start",
-    "heroku-postbuild": "npm install && cd ./client && npm install && npm run build"
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "npm start",
+    "dev:client": "cd client && npm start",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -24,6 +23,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "compression": "^1.7.4",
+    "concurrently": "^7.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
