--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "nodemon index.js",
     "dev:client": "cd client && npm start",
-    "heroku-postbuild": "cd client && npm install && npm run build && cd ../server && npm install",
+    "heroku-postbuild": "cd client && npm install && npm run build && cd ../ && npm install",
     "start": "node index.js"
   },
   "repository": {
