--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "https://micro-app-mailer.herokuapp.com/",
   "dependencies": {
     "axios": "^0.27.2",
     "react": "^18.2.0",
