--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "cd ./client && npm install && npm run build && cd ../ && npm install",
-    "heroku-postbuild": "npm run build",
+    "heroku-postbuild": "npm run build && npm start",
     "start": "node index.js"
   },
   "repository": {
